[package]
name = "warp"
version = "0.1.0"
authors = ["Takuto Nanjo <16991946+taku-n@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1.5"
warp = "0.3"
pretty_env_logger = "0.4.0"
